--- a/css/modal-settings.css
+++ b/css/modal-settings.css
@@ -22,7 +22,7 @@
 form {
    position: relative;
    width: min(90%, 600px);
-   height: 85%;
+   height: calc(100vh - 100px);
    margin-top: 1rem;
    background: var(--bg-main);
    color: #0A0C25;
@@ -50,7 +50,9 @@ legend {
    font-weight: bolder;
 }
 
-form section, form legend, form button {
+form section,
+form legend,
+form button {
    margin: 1.7rem 2.2rem;
 }
 
@@ -60,7 +62,8 @@ form section h2 {
    letter-spacing: 5px;
 }
 
-#conf-time, #conf-font {
+#conf-time,
+#conf-font {
    border-bottom: 2px solid #EEEEEE;
    padding-bottom: 1rem;
 }
@@ -101,24 +104,27 @@ form section h2 {
    letter-spacing: 1px;
 }
 
-#conf-font, #conf-color {
+#conf-font,
+#conf-color {
    display: flex;
    align-items: center;
    padding-bottom: 1.7rem;
 }
 
-#conf-color{
+#conf-color {
    padding-bottom: 0;
 }
 
-.list-fonts, .list-colors {
+.list-fonts,
+.list-colors {
    display: flex;
    column-gap: 20px;
    margin-left: auto;
    color: #8F939F;
 }
 
-.list-fonts li, .list-colors li {
+.list-fonts li,
+.list-colors li {
    font-weight: 700;
    width: 45px;
    height: 45px;
@@ -127,7 +133,7 @@ form section h2 {
    border-radius: 50%;
 }
 
-.list-fonts li:hover, 
+.list-fonts li:hover,
 .list-colors li:hover {
    cursor: pointer;
 }
@@ -169,12 +175,11 @@ li.color-theme3 {
    background: #D981F9;
 }
 
-.list-colors img{
+.list-colors img {
    vertical-align: middle;
 }
 
 .warning {
-   margin-bottom: 3rem;
    text-align: center;
    color: #95760d;
    bottom: 0;
