--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,11 @@ body {
    font-family: 'Open Sans', sans-serif;
    background: var(--background-main);
    color: var(--color-main);
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
+   height: 100vh;
 }
 
 header, main {
@@ -24,7 +29,7 @@ header, main {
 }
 
 header h1 {
-   margin-top: .2rem;
+   margin-top: 2rem;
    margin-bottom: 1rem; 
    text-align: center;
    font-size: 1.5rem;
